--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>TTC Matrix</title>
+    <title>Tao Te Ching</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="translations">
-        <button class="translation-btn active" data-translation="gia">Gia-Fu Feng</button>
+        <button class="translation-btn active" data-translation="gia">Gia-Fu Feng & Jane English</button>
+        <button class="translation-btn" data-translation="red_pine">Red Pine</button>
+        <button class="translation-btn" data-translation="lau">D. C. Lau</button>
         <button class="translation-btn" data-translation="hinton">David Hinton</button>
         <button class="translation-btn" data-translation="john_wu">John C. H. Wu</button>
-        <button class="translation-btn" data-translation="lau">D. C. Lau</button>
-        <button class="translation-btn" data-translation="red_pine">Red Pine</button>
         <button class="translation-btn" data-translation="yi_wu">Yi Wu</button>
     </div>
     <div id="main">
         <div>
             <div id="grid"></div>
-            <button id="random" title="Random Verse (Space)">
+            <button id="random" title="Random Chapter (Space or Enter)">
                 <img src="yin-and-yang.png" alt="Random" style="width:48px;height:48px;display:block;margin:auto;" />
             </button>
         </div>
